--- a/subversion/config
+++ b/subversion/config
@@ -118,6 +118,7 @@ enable-auto-props = yes
 # *.sh = svn:eol-style=native;svn:executable
 *.sh = svn:eol-style=native
 *.txt = svn:eol-style=native
+*.tex = svn:eol-style=native
 *.m = svn:eol-style=native
 *.png = svn:mime-type=image/png
 *.jpg = svn:mime-type=image/jpeg
