--- a/git/config
+++ b/git/config
@@ -4,6 +4,7 @@
 	email = jmchuma@gmail.com
 [core]
 	editor = vim
+	pager = less -r
 [alias]
 	ci = commit -s
 [color]
@@ -28,3 +29,5 @@
 # This was not a good idea
 #[merge]
 #	ff = false
+[push]
+	default = upstream
