--- a/linux/config/i3/config
+++ b/linux/config/i3/config
@@ -168,3 +168,8 @@ bindsym $mod+r mode "resize"
 bar {
         status_command i3status
 }
+
+for_window [class="^.*"] border pixel 0
+
+gaps inner 4
+gaps outer 4
