--- a/linux/config/i3/config
+++ b/linux/config/i3/config
@@ -166,7 +166,8 @@ bindsym $mod+r mode "resize"
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-        status_command i3status
+        position top
+        status_command i3blocks
 }
 
 for_window [class="^.*"] border pixel 0
