--- a/linux/config/i3/config
+++ b/linux/config/i3/config
@@ -37,7 +37,7 @@ bindsym $mod+Return exec st
 bindsym $mod+Shift+q kill
 
 # start rofi (a program launcher)
-bindsym $mod+d exec rofi -show drun
+bindsym $mod+d exec rofi -modi "drun" -show drun
 
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
