--- a/linux/config/i3/config
+++ b/linux/config/i3/config
@@ -180,4 +180,4 @@ gaps outer 4
 floating_maximum_size 500 x 300
 
 # Set wallpaper color
-exec --no-startup-id xsetroot -solid "#3465a4"
+exec --no-startup-id xsetroot -solid "#212C42"
