Add cbz to the handled extensions list
Handle cbz with mupdf.

--- a/linux/config/ranger/rifle.conf
+++ b/linux/config/ranger/rifle.conf
@@ -171,6 +171,10 @@ ext djvu, has djview, X, flag f = djview -- "$@"
 ext epub, has ebook-viewer, X, flag f = ebook-viewer -- "$@"
 ext mobi, has ebook-viewer, X, flag f = ebook-viewer -- "$@"
 
+# added by me
+ext cbz, has mupdf,    X, flag f = mupdf "$@"
+ext cbz, has mupdf-x11,X, flag f = mupdf-x11 "$@"
+
 #-------------------------------------------
 # Image Viewing:
 #-------------------------------------------
