--- a/linux/config/i3/config
+++ b/linux/config/i3/config
@@ -165,6 +165,9 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
+# use maim for screenshots
+bindsym --release Print exec maim ~/pix/Screenshot-$(date +%Y%m%d-%H%M%S).png
+
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
