--- a/linux/config/i3/config
+++ b/linux/config/i3/config
@@ -171,6 +171,15 @@ bindsym --release Print exec maim ~/pix/Screenshot-$(date +%Y%m%d-%H%M%S).png
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
+    colors {
+        background #1d2021
+#        statusline #00A5FF #that neon blue
+#                           border   backgr.  letter
+        focused_workspace   #458588  #458588  #ffffff
+        active_workspace    #98971a  #98971a  #ffffff
+        inactive_workspace  #1d2021  #1d2021  #ffffff
+        urgent_workspace    #cc241d  #cc241d  #ffffff
+    }
         position top
         status_command i3blocks
 }
