--- a/linux/config/i3/config
+++ b/linux/config/i3/config
@@ -190,6 +190,15 @@ default_border pixel 3
 default_floating_border normal
 #default_floating_border pixel 5
 
+# class                 border    backgr.   text      indicator   child_border
+client.focused          #000000   #000000   #ffffff   #fabd2f     #458588
+# client.focused_inactive #333333 #5f676a #ffffff #484e50   #5f676a
+# client.unfocused        #333333 #222222 #888888 #292d2e   #222222
+# client.urgent           #2f343a #900000 #ffffff #900000   #900000
+# client.placeholder      #000000 #0c0c0c #ffffff #000000   #0c0c0c
+#
+# client.background       #ffffff
+
 gaps inner 4
 gaps outer 4
 
