Prevent mouse movements to change window focus

--- a/linux/config/i3/config
+++ b/linux/config/i3/config
@@ -204,5 +204,8 @@ gaps outer 4
 
 floating_maximum_size 500 x 300
 
+# prevent windows focus to chage with mouse movements
+focus_follows_mouse no
+
 # Set wallpaper color
 exec --no-startup-id xsetroot -solid "#1d2021"
