--- a/linux/config/i3blocks/config
+++ b/linux/config/i3blocks/config
@@ -73,7 +73,7 @@ interval=30
 # The address can be forced to IPv4 or IPv6 with -4 or -6 switches.
 [iface]
 #instance=wlan0
-color=#00FF00
+color=#98971a
 interval=10
 separator=false
 
