--- a/git/config
+++ b/git/config
@@ -1,6 +1,6 @@
 # DON'T FORGET TO ADD GITHUB INFO TO EACH REPO CONFIG
 [user]
-	name = Jose M. Chumo Mata
+	name = ? Chumo Mata
 	email = jmchuma@gmail.com
 [core]
 	editor = vim
