--- a/linux/config/i3/config
+++ b/linux/config/i3/config
@@ -31,7 +31,7 @@ floating_modifier $mod
 
 # start a terminal
 #bindsym $mod+Return exec i3-sensible-terminal
-bindsym $mod+Return exec st
+bindsym $mod+Return exec tabbed -c -r 2 st -w ''
 
 # kill focused window
 bindsym $mod+Shift+q kill
