--- a/linux/config/i3/config
+++ b/linux/config/i3/config
@@ -166,7 +166,12 @@ mode "resize" {
 bindsym $mod+r mode "resize"
 
 # use maim for screenshots
-bindsym --release Print exec maim ~/pix/Screenshot-$(date +%Y%m%d-%H%M%S).png
+#bindsym --release Print        exec maim    ~/pix/Screenshot-$(date +%Y%m%d-%H%M%S).png
+#bindsym --release Shift+Print  exec maim -s ~/pix/Screenshot-$(date +%Y%m%d-%H%M%S).png
+#bindsym --release Print exec "maim ~/pix/Screenshot-$(date +%Y%m%d-%H%M%S).png"
+#bindsym --release Print exec --no-startup-id "maim ~/pix/Screenshot-$(date +%Y%m%d-%H%M%S).png"
+# maim is broken, use import from imagemagick instead
+bindsym --release Print exec --no-startup-id import -w root ~/pix/Screenshot-$(date +%Y%m%d-%H%M%S).png
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
