--- a/linux/config/i3blocks/config
+++ b/linux/config/i3blocks/config
@@ -124,8 +124,8 @@ min_width=CPU: 100.00%
 # Battery indicator
 #
 # The battery instance defaults to 0.
-[battery]
-label=BAT
+#[battery]
+#label=BAT
 #label=⚡
 #instance=1
-interval=30
+#interval=30
