--- a/linux/config/ranger/rc.conf
+++ b/linux/config/ranger/rc.conf
@@ -39,7 +39,7 @@ set show_hidden false
 # Ask for a confirmation when running the "delete" command?
 # Valid values are "always", "never", "multiple" (default)
 # With "multiple", ranger will ask only if you delete multiple files at once.
-set confirm_on_delete multiple
+set confirm_on_delete always
 
 # Use non-default path for file preview script?
 # ranger ships with scope.sh, a script that calls external programs (see
@@ -57,7 +57,7 @@ set automatically_count_files true
 set open_all_images true
 
 # Be aware of version control systems and display information.
-set vcs_aware false
+set vcs_aware true
 
 # State of the four backends git, hg, bzr, svn. The possible states are
 # disabled, local (only show local info), enabled (show local and remote
