Stop using ffplay for audio and video files
Comment the lines calling ffplay to open audio and video files.
I switched to mplayer because OSD and easy subtitles.

--- a/linux/config/ranger/rifle.conf
+++ b/linux/config/ranger/rifle.conf
@@ -110,7 +110,7 @@ ext php = php -- "$1"
 #--------------------------------------------
 # Audio without X
 #-------------------------------------------
-mime ^audio|ogg$, terminal, has ffplay   = ffplay -- "$1"
+#mime ^audio|ogg$, terminal, has ffplay   = ffplay -- "$1"
 mime ^audio|ogg$, terminal, has mpv      = mpv -- "$@"
 mime ^audio|ogg$, terminal, has mplayer2 = mplayer2 -- "$@"
 mime ^audio|ogg$, terminal, has mplayer  = mplayer -- "$@"
@@ -119,7 +119,7 @@ ext midi?,        terminal, has wildmidi = wildmidi -- "$@"
 #--------------------------------------------
 # Video/Audio with a GUI
 #-------------------------------------------
-mime ^video|audio, has ffplay,   X, flag f = ffplay -- "$1"
+#mime ^video|audio, has ffplay,   X, flag f = ffplay -- "$1"
 mime ^video|audio, has gmplayer, X, flag f = gmplayer -- "$@"
 mime ^video|audio, has smplayer, X, flag f = smplayer "$@"
 mime ^video,       has mpv,      X, flag f = mpv -- "$@"
