--- a/linux/config/ranger/rc.conf
+++ b/linux/config/ranger/rc.conf
@@ -25,7 +25,6 @@
 #     multipane: Midnight-commander like multipane view showing all tabs next
 #                to each other
 set viewmode miller
-#set viewmode multipane
 
 # How many columns are there, and what are their relative widths?
 set column_ratios 1,3,4
@@ -117,7 +116,7 @@ set iterm2_font_width 8
 set iterm2_font_height 11
 
 # Use a unicode "..." character to mark cut-off filenames?
-set unicode_ellipsis false
+set unicode_ellipsis true
 
 # BIDI support - try to properly display file names in RTL languages (Hebrew, Arabic).
 # Requires the python-bidi pip package
@@ -182,7 +181,7 @@ set shorten_title 3
 set hostname_in_titlebar true
 
 # Abbreviate $HOME with ~ in the titlebar (first line) of ranger?
-set tilde_in_titlebar false
+set tilde_in_titlebar true
 
 # How many directory-changes or console-commands should be kept in history?
 set max_history_size 20
