--- a/linux/config/i3/config
+++ b/linux/config/i3/config
@@ -228,6 +228,31 @@ mode "$mode_system" {
 bindsym $mod+Pause mode "$mode_system"
 
 
+# FROM
+# https://faq.i3wm.org/question/4615/how-can-i-move-a-floating-window-with-keys/index.html
+#
+# move floating windows with keys
+bindsym $mod+m mode "move" focus floating
+mode "move" {
+    bindsym $mod+Tab focus right
+
+    bindsym Left  move left
+    bindsym Down  move down
+    bindsym Up    move up
+    bindsym Right move right
+
+    bindsym h     move left
+    bindsym j     move down
+    bindsym k     move up
+    bindsym l     move right
+
+    # back to normal: Enter or Escape
+    bindsym Return mode "default"
+    bindsym Escape mode "default"
+}
+
+
+
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
