--- a/linux/config/ranger/rifle.conf
+++ b/linux/config/ranger/rifle.conf
@@ -111,7 +111,7 @@ ext php = php -- "$1"
 # Audio without X
 #-------------------------------------------
 #mime ^audio|ogg$, terminal, has ffplay   = ffplay -- "$1"
-mime ^audio|ogg$, terminal, has mpv      = mpv -- "$@"
+mime ^audio|ogg$, terminal, !X, has mpv       = mpv -- "$@"
 #mime ^audio|ogg$, terminal, has mplayer2 = mplayer2 -- "$@"
 #mime ^audio|ogg$, terminal, has mplayer  = mplayer -- "$@"
 ext midi?,        terminal, has wildmidi = wildmidi -- "$@"
@@ -122,8 +122,7 @@ ext midi?,        terminal, has wildmidi = wildmidi -- "$@"
 #mime ^video|audio, has ffplay,   X, flag f = ffplay -- "$1"
 #mime ^video|audio, has gmplayer, X, flag f = gmplayer -- "$@"
 #mime ^video|audio, has smplayer, X, flag f = smplayer "$@"
-mime ^video,       has mpv,      X, flag f = mpv -- "$@"
-#mime ^video,       has mpv,      X, flag f = mpv --fs -- "$@"
+mime ^video|audio,  has mpv,      X, flag f = mpv --force-window -- "$@"
 #mime ^video,       has mplayer2, X, flag f = mplayer2 -- "$@"
 #mime ^video,       has mplayer2, X, flag f = mplayer2 -fs -- "$@"
 #mime ^video,       has mplayer,  X, flag f = mplayer -- "$@"
@@ -172,8 +171,7 @@ ext epub, has ebook-viewer, X, flag f = ebook-viewer -- "$@"
 ext mobi, has ebook-viewer, X, flag f = ebook-viewer -- "$@"
 
 # added by me
-ext cbz, has mupdf,    X, flag f = mupdf "$@"
-ext cbz, has mupdf-x11,X, flag f = mupdf-x11 "$@"
+ext cbr|cbz, has mcomix,   X, flag f = mcomix "$@"
 
 #-------------------------------------------
 # Image Viewing:
